force-app/main/default/objects/User/fields/HAM_JEDI_Dashboard_Preferences__c.field-meta.xml
<CustomField>
    <fullName>HAM_JEDI_Dashboard_Preferences__c</fullName>
    <label>JEDI Dashboard Preferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>