force-app/main/default/objects/User/fields/HAM_JEDI_Last_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_JEDI_Last_Used_Date__c</fullName>
    <description>The most recent date you accessed the JEDI page.</description>
    <inlineHelpText>The most recent date you accessed the JEDI page.</inlineHelpText>
    <label>JEDI Last Used Date</label>
    <type>Date</type>
</CustomField>