force-app/main/default/objects/User/fields/HAM_JEDI_Usage_Count__c.field-meta.xml
<CustomField>
    <fullName>HAM_JEDI_Usage_Count__c</fullName>
    <description>Counts the number of unique days user has accessed the JEDI page. This increases at most once per day when you visit JEDI.</description>
    <inlineHelpText>Counts the number of unique days user has accessed the JEDI page. This increases at most once per day when you visit JEDI.</inlineHelpText>
    <label>JEDI Usage Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>