force-app/main/default/objects/User/fields/iWave_PROscores__clientAccessToken__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__clientAccessToken__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>iWave API Access Token</label>
    <length>160</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>