force-app/main/default/objects/User/fields/ucinn_ascendv2__Department__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Unit</valueSetName>
    </valueSet>
</CustomField>