force-app/main/default/objects/User/fields/ucinn_ascendv2__Operating_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Operating_Entity_Id__c</fullName>
    <label>Operating Entity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>